--- a/package.json
+++ b/package.json
@@ -1,177 +1,177 @@
 {
-  "name": "rafi-payment",
-  "version": "1.1.3",
-  "description": "Rent management at your fingertips",
-  "author": "Nick Ford <nickforddesign@gmail.com>",
-  "repository": "https://github.com/TheRafiApp/rafipayment_frontend",
-  "license": "MIT",
-  "scripts": {
-    "version": "node build/version.js",
-    "start": "node build/dev-server.js",
-    "ui": "node build/dev-server-ui.js",
-    "build": "node build/build.js",
-    "cordova": "node build/build-cordova.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "e2e": "node test/e2e/runner.js",
-    "test": "export NODE_ENV=test && jest",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
-    "ios": "npm run cordova && phonegap emulate ios",
-    "browser": "npm run cordova && phonegap emulate browser",
-    "serve": "npm run cordova && phonegap serve"
-  },
-  "dependencies": {
-    "animejs": "^2.1.0",
-    "babel-plugin-array-includes": "^2.0.3",
-    "cordova-ios": "^4.4.0",
-    "cordova-plugin-cocoapod-support": "^1.3.0",
-    "cordova-plugin-firebase-analytics": "^0.10.1",
-    "exports-loader": "^0.6.4",
-    "fastclick-fixed": "^1.0.7",
-    "moment": "^2.18.1",
-    "pubsub-js": "^1.5.7",
-    "raven-js": "^3.17.0",
-    "v-mask": "^1.0.4",
-    "vee-validate": "^2.0.0-rc.17",
-    "vue": "^2.4.4",
-    "vue-analytics": "^4.1.3",
-    "vue-router": "^2.5.2",
-    "vue-touch": "^2.0.0-beta.4",
-    "vuex": "^2.2.1",
-    "whatwg-fetch": "^2.0.2",
-    "cordova-browser": "~4.1.0",
-    "cordova-plugin-battery-status": "~1.1.1",
-    "cordova-plugin-console": "~1.0.2",
-    "cordova-plugin-device": "~1.1.1",
-    "cordova-plugin-device-motion": "~1.2.0",
-    "cordova-plugin-device-orientation": "~1.0.2",
-    "cordova-plugin-dialogs": "~1.2.0",
-    "cordova-plugin-globalization": "~1.0.3",
-    "cordova-plugin-inappbrowser": "~1.3.0",
-    "cordova-plugin-network-information": "~1.2.0",
-    "cordova-plugin-splashscreen": "~3.2.1",
-    "cordova-plugin-statusbar": "~2.1.2",
-    "cordova-plugin-statusbar-hide-on-startup": "~0.1.7",
-    "cordova-plugin-vibration": "~2.1.0",
-    "cordova-plugin-whitelist": "~1.2.1",
-    "phonegap-plugin-push": "~1.10.5"
-  },
-  "devDependencies": {
-    "app-root-dir": "^1.0.2",
-    "autoprefixer": "^7.1.4",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.0",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-dynamic-import-node": "^1.1.0",
-    "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "chalk": "^2.1.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cordova-auto-patch": "^1.2.2",
-    "coveralls": "^2.13.1",
-    "cross-env": "^5.0.5",
-    "cross-spawn": "^5.0.1",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.7.2",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^3.2.2",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "friendly-errors-webpack-plugin": "^1.1.3",
-    "function-bind": "^1.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.1",
-    "jest": "^21.1.0",
-    "jest-vue-preprocessor": "^1.0.1",
-    "lodash": "^4.17.4",
-    "mockdate": "^2.0.1",
-    "node-sass": "^4.5.0",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.1.0",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^6.0.2",
-    "semver": "^5.3.0",
-    "url-loader": "^0.5.7",
-    "vue-loader": "^13.0.5",
-    "vue-resource": "^1.2.1",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^4.1.0",
-    "xml2js": "^0.4.17"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserlist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "jest": {
-    "collectCoverage": true,
-    "coverageDirectory": "<rootDir>/coverage",
-    "testPathIgnorePatterns": [
-      "<rootDir>/plugins",
-      "<rootDir>/src/js/config"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/jest-vue-preprocessor"
+    "name": "rafi-payment",
+    "version": "1.1.3",
+    "description": "Rent management at your fingertips",
+    "author": "Nick Ford <nickforddesign@gmail.com>",
+    "repository": "https://github.com/TheRafiApp/rafipayment_frontend",
+    "license": "MIT",
+    "scripts": {
+        "version": "node build/version.js",
+        "start": "node build/dev-server.js",
+        "ui": "node build/dev-server-ui.js",
+        "build": "node build/build.js",
+        "cordova": "node build/build-cordova.js",
+        "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
+        "e2e": "node test/e2e/runner.js",
+        "test": "export NODE_ENV=test && jest",
+        "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+        "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
+        "ios": "npm run cordova && phonegap emulate ios",
+        "browser": "npm run cordova && phonegap emulate browser",
+        "serve": "npm run cordova && phonegap serve"
     },
-    "setupFiles": [
-      "<rootDir>/src/js/config/jest.js"
-    ]
-  },
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-firebase-analytics": {},
-      "cordova-plugin-battery-status": {},
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-device-motion": {},
-      "cordova-plugin-device-orientation": {},
-      "cordova-plugin-dialogs": {},
-      "cordova-plugin-globalization": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-network-information": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-statusbar-hide-on-startup": {},
-      "cordova-plugin-vibration": {},
-      "cordova-plugin-whitelist": {},
-      "phonegap-plugin-push": {
-        "SENDER_ID": "1:582343470433:android:9bde5be4ab52af2c"
-      }
+    "dependencies": {
+        "animejs": "^2.1.0",
+        "babel-plugin-array-includes": "^2.0.3",
+        "cordova-browser": "~4.1.0",
+        "cordova-ios": "^4.5.1",
+        "cordova-plugin-battery-status": "~1.1.1",
+        "cordova-plugin-cocoapod-support": "^1.3.0",
+        "cordova-plugin-console": "~1.0.2",
+        "cordova-plugin-device": "~1.1.1",
+        "cordova-plugin-device-motion": "~1.2.0",
+        "cordova-plugin-device-orientation": "~1.0.2",
+        "cordova-plugin-dialogs": "~1.2.0",
+        "cordova-plugin-firebase-analytics": "^0.10.1",
+        "cordova-plugin-globalization": "~1.0.3",
+        "cordova-plugin-inappbrowser": "~1.3.0",
+        "cordova-plugin-network-information": "~1.2.0",
+        "cordova-plugin-splashscreen": "~3.2.1",
+        "cordova-plugin-statusbar": "~2.1.2",
+        "cordova-plugin-statusbar-hide-on-startup": "~0.1.7",
+        "cordova-plugin-vibration": "~2.1.0",
+        "cordova-plugin-whitelist": "~1.2.1",
+        "exports-loader": "^0.6.4",
+        "fastclick-fixed": "^1.0.7",
+        "moment": "^2.18.1",
+        "phonegap-plugin-push": "~1.10.5",
+        "pubsub-js": "^1.5.7",
+        "raven-js": "^3.17.0",
+        "v-mask": "^1.0.4",
+        "vee-validate": "^2.0.0-rc.17",
+        "vue": "^2.4.4",
+        "vue-analytics": "^4.1.3",
+        "vue-router": "^2.5.2",
+        "vue-touch": "^2.0.0-beta.4",
+        "vuex": "^2.2.1",
+        "whatwg-fetch": "^2.0.2"
     },
-    "platforms": [
-      "ios",
-      "browser"
-    ]
-  }
+    "devDependencies": {
+        "app-root-dir": "^1.0.2",
+        "autoprefixer": "^7.1.4",
+        "babel-core": "^6.26.0",
+        "babel-eslint": "^8.0.0",
+        "babel-jest": "^21.0.2",
+        "babel-loader": "^7.1.2",
+        "babel-plugin-dynamic-import-node": "^1.1.0",
+        "babel-plugin-istanbul": "^4.1.5",
+        "babel-plugin-module-resolver": "^2.7.1",
+        "babel-plugin-transform-runtime": "^6.22.0",
+        "babel-polyfill": "^6.23.0",
+        "babel-preset-latest": "^6.22.0",
+        "babel-preset-stage-2": "^6.22.0",
+        "babel-register": "^6.22.0",
+        "chalk": "^2.1.0",
+        "connect-history-api-fallback": "^1.3.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "cordova-auto-patch": "^1.2.2",
+        "coveralls": "^2.13.1",
+        "cross-env": "^5.0.5",
+        "cross-spawn": "^5.0.1",
+        "css-loader": "^0.28.7",
+        "eslint": "^4.7.2",
+        "eslint-config-standard": "^10.2.1",
+        "eslint-friendly-formatter": "^3.0.0",
+        "eslint-loader": "^1.6.1",
+        "eslint-plugin-html": "^3.2.2",
+        "eslint-plugin-import": "^2.7.0",
+        "eslint-plugin-node": "^5.1.1",
+        "eslint-plugin-promise": "^3.4.0",
+        "eslint-plugin-standard": "^3.0.1",
+        "eventsource-polyfill": "^0.9.6",
+        "express": "^4.14.1",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "file-loader": "^0.11.2",
+        "friendly-errors-webpack-plugin": "^1.1.3",
+        "function-bind": "^1.1.0",
+        "html-webpack-plugin": "^2.28.0",
+        "http-proxy-middleware": "^0.17.3",
+        "inject-loader": "^3.0.1",
+        "jest": "^21.1.0",
+        "jest-vue-preprocessor": "^1.0.1",
+        "lodash": "^4.17.4",
+        "mockdate": "^2.0.1",
+        "node-sass": "^4.5.0",
+        "opn": "^5.1.0",
+        "optimize-css-assets-webpack-plugin": "^3.2.0",
+        "ora": "^1.1.0",
+        "rimraf": "^2.6.0",
+        "sass-loader": "^6.0.2",
+        "semver": "^5.3.0",
+        "url-loader": "^0.5.7",
+        "vue-loader": "^13.0.5",
+        "vue-resource": "^1.2.1",
+        "vue-style-loader": "^3.0.3",
+        "vue-template-compiler": "^2.4.4",
+        "webpack": "^3.6.0",
+        "webpack-bundle-analyzer": "^2.2.1",
+        "webpack-dev-middleware": "^1.10.0",
+        "webpack-hot-middleware": "^2.16.1",
+        "webpack-merge": "^4.1.0",
+        "xml2js": "^0.4.17"
+    },
+    "engines": {
+        "node": ">= 4.0.0",
+        "npm": ">= 3.0.0"
+    },
+    "browserlist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ],
+    "jest": {
+        "collectCoverage": true,
+        "coverageDirectory": "<rootDir>/coverage",
+        "testPathIgnorePatterns": [
+            "<rootDir>/plugins",
+            "<rootDir>/src/js/config"
+        ],
+        "moduleFileExtensions": [
+            "js",
+            "vue"
+        ],
+        "transform": {
+            "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
+            ".*\\.(vue)$": "<rootDir>/node_modules/jest-vue-preprocessor"
+        },
+        "setupFiles": [
+            "<rootDir>/src/js/config/jest.js"
+        ]
+    },
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-firebase-analytics": {},
+            "cordova-plugin-battery-status": {},
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-device-motion": {},
+            "cordova-plugin-device-orientation": {},
+            "cordova-plugin-dialogs": {},
+            "cordova-plugin-globalization": {},
+            "cordova-plugin-inappbrowser": {},
+            "cordova-plugin-network-information": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-statusbar-hide-on-startup": {},
+            "cordova-plugin-vibration": {},
+            "cordova-plugin-whitelist": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "1:582343470433:android:9bde5be4ab52af2c"
+            }
+        },
+        "platforms": [
+            "browser",
+            "ios"
+        ]
+    }
 }
